<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.business.unknow</groupId>
		<artifactId>invoice-manager-platform</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>invoice-manager-commons</artifactId>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.business.unknow</groupId>
			<artifactId>invoice-manager-models</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>mx.com.sw.services</groupId>
			<artifactId>SW-JAVA</artifactId>
			<version>0.0.3.4</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
